tdf#117948 Do not treat hidden rows as zero in ODF export

The object geometry in ODF file format has values so as if no hidden
columns or rows exists. But for rendering the object geometry has to
treat hidden rows and columns as zero. This patch changes the object
geometry temporarily to the 'no hidden columns and rows' mode for
export and restores the original geometry afterwards.
The patch considers hidden columns left from the shape and hidden rows
above the shape. So the object is shifted. Considering hidden columns
or rows in the area, which is covered by the shape, is still missing.
That would possibly require scaling.

cherry-pick from commit: 1cb6bb9576871ff5d56c9810ff1791abc3dd64fd
(tdf#117948 Do not treat hidden rows as zero in ODF export)

Change-Id: Icdb3f08404ca4d212d25a1967bfdc0bfc7186007
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105427
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149163
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>